@@ -156,4 +156,4 @@ issue 203:
 issue 204:
     bug: debug world generates start chest
 
-[211-213]
+[211-214]
